# backend/Models/DTOs/ABBResponseDTO.cs
@@ -2,9 +2,9 @@ namespace backend.Models.DTOs;
 
 public class ABBResponseDTO
 {
+    public Guid ApplicationId { get; set; }
     public UserDTO Author { get; set; }
     public DateTime CreationDateTime { get; set; } = DateTime.Now;
     public string TextContent { get; set; }
     public AzubiRequestDTO RelatedRequest { get; set; }
-    
 }
